Remove backface-visibility rule to fix GF-41103.
Enyo-DCO-1.1-Signed-off-by: Chris Patalano <christopher.patalano@lge.com>

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -3664,8 +3664,6 @@
 .matrix3dsurface {
   -webkit-transform-origin: center center;
   transform-origin: center center;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
   -webkit-transform-style: flat;
   transform-style: flat;
   -webkit-box-sizing: border-box;
